# MPI_TUTORIAL

./: .gitignore  LICENSE  README.md  hosts
Broadcast/: CMakeLists.txt  mpi_broadcast.cc
DynamicSendAndReceive/: CMakeLists.txt  mpi_check_status.cc  mpi_probe.cc
GroupsAndCommunicators/: CMakeLists.txt  groups.cc  split.cc
HelloWorld/: CMakeLists.txt  mpi_hello_world.c
ParallelRank/: CMakeLists.txt  random_rank.cc  tmpi_rank.cc  tmpi_rank.hpp
RandomWalk/: CMakeLists.txt  mpi_random_walk.cc
Reduce/: CMakeLists.txt  reduce_avg.cc  reduce_stddev.cc
ScatterAndGather/: CMakeLists.txt  mpi_all_avg.cc  mpi_avg.cc
SendReceive/: CMakeLists.txt  mpi_ping_pong.cc  mpi_ring.cc  mpi_send_recv.cc
